# hwml-rs

./: .gitignore  Cargo.toml  ELABORATOR_PROGRESS.md  ENHANCED_TEST_UTILS_USAGE.md  README.md  TEST_MIGRATION_SUMMARY.md  flake.nix  justfile
.cargo/: config.toml
.github/workflows/: ci-nix.yml  ci.yml  deploy-docs.yml
crates/hwml/: Cargo.toml
crates/hwml-circt/: Cargo.toml  README.md
crates/hwml-circt-sys/: Cargo.toml  build.rs  wrapper.h
crates/hwml-circt-sys/src/: lib.rs  mlir_context.rs
crates/hwml-circt/examples/: README.md  adder.rs  basic.rs  minimal_hsyntax.rs  register.rs
crates/hwml-circt/src/: context.rs  error.rs  export.rs  lib.rs  translate.rs  translate_new.rs
crates/hwml-circt/src/dialects/: comb.rs  hw.rs  mod.rs  seq.rs
crates/hwml-core/: Cargo.toml
crates/hwml-core/examples/: equal_tests.rs  eval_quote_demo.rs  examples.rs  run_examples.rs  test_quote_splice_raise.rs  unify_examples.rs
crates/hwml-core/fuzz/: Cargo.toml  README.md
crates/hwml-core/fuzz/fuzz_targets/: fuzz_core_parser.rs  fuzz_core_roundtrip.rs  fuzz_module_arbitrary.rs  fuzz_module_generation.rs  fuzz_target_1.rs
crates/hwml-core/src/: binding.rs  check.rs  check_module.rs  common.rs  db.rs  declaration.rs  domain.rs  env.rs  environment.rs  equal.rs  eval.rs  global_env.rs  lib.rs  location.rs  lower.rs  name.rs  pattern_unify.rs  prelude.rs  printing.rs  quote.rs  symbol.rs  test_utils.rs  ty.rs  typed.rs  unify.rs  val.rs  word.rs
crates/hwml-core/src/syn/: .print.rs.pending-snap  basic.rs  declaration.rs  mod.rs  parse.rs  print.rs  syntax.rs  telescope.rs
crates/hwml-core/src/syntax/: basic.rs  mod.rs  parse.rs  print.rs
crates/hwml-db/: Cargo.toml
crates/hwml-db/src/: cst.rs  db.rs  grammar.lalrpop  ir.rs  lib.rs  parsing.rs  pi.rs
crates/hwml-dev/: Cargo.toml  README.md
crates/hwml-dev/src/: lib.rs
crates/hwml-dev/test/: scratch.dev
crates/hwml-elab/: Cargo.toml  README.md
crates/hwml-elab/src/: async_solver.rs  binder.rs  blocker.rs  constraint.rs  diagnostic.rs  dubbing.rs  elaborator.rs  engine.rs  expr.rs  force.rs  judgement.rs  lib.rs  occurs_check.rs  pipeline.rs  renaming.rs  resolver.rs  rules.rs  solver.rs  state.rs  stub_table.rs  test_utils.rs  unify.rs  util.rs  zonk.rs
crates/hwml-elab/src/diagnostic/: diagnostic.rs  mod.rs
crates/hwml-elab/src/kernel/: mod.rs  tactic.rs  trusted.rs
crates/hwml-elab/src/kernel/rule/: application.rs  decode.rs  lambda.rs  mod.rs  pi.rs  switch.rs
crates/hwml-elab/src/old/: elaborator.rs  pattern.rs  pipeline.rs  rules.rs
crates/hwml-elab/src/old/refiner/: env.rs  mod.rs  state.rs
crates/hwml-elab/src/old/rule/: def.rs  mod.rs
crates/hwml-elab/src/trusted/: annotate.rs  application.rs  elab_name.rs  lambda.rs  mod.rs  name.rs  pi.rs  rules.rs  trusted.rs  var.rs
crates/hwml-lsp-server/: Cargo.toml
crates/hwml-lsp-server/src/: main.rs
crates/hwml-parser/: Cargo.toml
crates/hwml-parser/src/: cst.rs  lib.rs
crates/hwml-support/: Cargo.toml  diagnostic.rs
crates/hwml-support/src/: lib.rs  line_info.rs  loc.rs  location.rs  pp.rs  salsa.rs
crates/hwml-support/src/diagnostics/: mod.rs
crates/hwml-surface/: Cargo.toml
crates/hwml-surface/src/: cst.rs  grammar.lalrpop  lex.rs  lib.rs  parsing.rs  syntax.rs
crates/hwml/src/: main.rs
crates/hwml_db/: Cargo.toml
crates/hwml_db/src/: ir.rs  lib.rs
crates/hwml_parser/src/: cst.rs  grammar.lalrpop  lib.rs
crates/hwml_server/: Cargo.toml
crates/mdbook-hwml/: Cargo.toml  README.md
crates/mdbook-hwml/src/: lib.rs  main.rs
crates/mdbook-hwml/tests/: validate_docs.rs
design/: 2ltt-csp.md  2ltt-quote.md  2ltt-stuck-splice.md  ARCHITECTURE.md  COMPARISON-SUMMARY.md  LEGACY-TO-TYPECODE-MIGRATION.md  LET_CORRECTED_DESIGN.md  LET_DATA_FLOW.md  LET_IMPLEMENTATION_CHECKLIST.md  LET_IMPLEMENTATION_FINAL.md  LET_IMPLEMENTATION_PLAN.md  LET_KEY_INSIGHT.md  NbE-IMPLEMENTATION-PLAN.md  Notes.md  PHASE1-COMPLETE.md  PHASE1.5-PLAN.md  README-NbE.md  async-unification-tutorial.md  case-splitting.md  docs.md  eda-workflow-comprehensive.md  elaboration.md  hwml.md  implementation-plan-lcf.md  kernel-judgements.md  metavariable-migration-guide.md  nbe-architecture.md  nbe-migration-map.md  nbe-phase1-implementation.md  nbe-quick-reference.md  nbe-vs-legacy-comparison.md  pattern-matching.md  poisoned-metavariables.md  salsa-location-architecture.md  type-checking-implementation-plan.md  universes.md  universes_and_shunting.md
doc/: Development.md  Notes.md
docs/: README.md  SUMMARY-equality-and-transport.md  book.toml  equality-pattern-matching-example.md  system-context-report.md  transport-example.md
docs/design/: 2ltt-nbe.md  Development.md  LET_CORRECTED_DESIGN.md  LET_DELTA_REDUCTION_REFACTOR.md  LET_IMPLEMENTATION_CHECKLIST.md  LET_IMPLEMENTATION_SUMMARY.md  LET_TECHNICAL_DESIGN.md  Staged-nbe.md  hwml-evaluation-strategy.md  markdown.md  type-checking-implementation-plan.md  unification.md
docs/src/: SUMMARY.md  intro.md  test-preprocessor.md
docs/src/core/: overview.md
docs/src/guide/: getting-started.md
docs/src/internals/: core-ir.md
docs/src/reference/: surface-syntax.md
docs/theme/: hwml-highlight.js  hwml.js
examples/: combinational.hwmlc  notes.hwml  parsing.hwml  prim_test.hwml  queue.hwmlc  queue_gen.hwmlc  quoting.hwml  simple.hwml  test.hwml
hwml-vscode/: CHANGELOG.md  README.md  hwml-configuration.json  package-lock.json  package.json
hwml-vscode/src/: extension.ts
hwml-vscode/syntaxes/: hwml.tmLanguage.json
nix/modules/: devshell.nix  rust.nix
scripts/: build-docs.sh  test-circt-fix.sh  test-hwml-examples.sh  validate-ci.sh
