[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
homepage = ""
documentation = ""
repository = ""
authors = []
license = ""

[workspace.dependencies]
# Local Crates
hwml = { path = "crates/hwml" }
hwml_db = { path = "crates/hwml-db" }
hwml_parser = { path = "crates/hwml-parser" }
hwml_lsp_server = { path = "crates/hwml-lsp-server" }

# External Crates
annotate-snippets = "0.11.5"
clap = { version = "4.5.28", features = ["derive"] }
derive-new = "0.7.0"
salsa = { git = "https://github.com/salsa-rs/salsa", rev = "75c5337" }
lsp-server = "0.7.8"
lsp-types = "0.97.0"
lalrpop = { version = "0.22.1", features = ["unicode"] }
lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
serde = "*"
serde_json = "1.0.138"
dashmap = "6.1.0"
notify-debouncer-mini = "0.4.1"
eyre = "0.6.12"
crossbeam-channel = "0.5.15"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(fuzzing)",
    "cfg(codspeed)",
] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
