[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
homepage = "hardware.land"
documentation = ""
repository = "github.com/youngar/hwml-rs"
authors = ["Andrew Young", "Robert Young"]
license = "n/a"
keywords = ["hardware", "hdl"]

[workspace.dependencies]
# Local Crates
hwml = { path = "crates/hwml" }
hwml_core = { path = "crates/hwml-core" }
hwml_db = { path = "crates/hwml-db" }
hwml_elab = { path = "crates/hwml-elab" }
hwml_lsp_server = { path = "crates/hwml-lsp-server" }
hwml_parser = { path = "crates/hwml-parser" }
hwml_support = { path = "crates/hwml-support" }
hwml_surface = { path = "crates/hwml-surface" }

# External Crates
annotate-snippets = "0.11.5"
anyhow = "1.0"
arbitrary = { version = "1", features = ["derive"] }
clap = { version = "4.5.28", features = ["derive"] }
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
derive-new = "0.7.0"
elegance = "0.3.2"
eyre = "0.6.12"
futures = "0.3"
insta = { version = "1.43.1", features = ["yaml"] }
itertools = "0.13"
la-arena = "0.3.1"
lalrpop = { version = "0.22.1", features = ["unicode"] }
lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
logos = "0.15.1"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
notify-debouncer-mini = "0.4.1"
salsa = { git = "https://github.com/salsa-rs/salsa", rev = "75c5337" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2"
pretty = "0.12.5"
slab = "0.4"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(fuzzing)",
    "cfg(codspeed)",
] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
