[package]
name = "hwml_core"
description = "The core syntax, typechecker, and evaluator."

publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
elegance.workspace = true
anyhow.workspace = true
hwml_support.workspace = true
serde.workspace = true
