[package]
name = "hwml_core"
description = "The core syntax, typechecker, and evaluator."

publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arbitrary = { workspace = true, optional = true }
elegance.workspace = true
hwml_support.workspace = true
logos.workspace = true
salsa.workspace = true
serde.workspace = true

[dev-dependencies]
insta.workspace = true

[features]
arbitrary = ["dep:arbitrary"]

[[example]]
name = "datatype_declarations"
path = "../../examples/datatype_declarations.rs"

[[example]]
name = "unified_declarations"
path = "../../examples/unified_declarations.rs"

[lints]
workspace = true
