[package]
name = "hwml_db"
description = ""

publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
hwml_parser.workspace = true
lalrpop-util.workspace = true
clap.workspace = true
salsa.workspace = true
derive-new.workspace = true
annotate-snippets.workspace = true
dashmap.workspace = true
eyre.workspace = true

[lints]
workspace = true
