[package]
name = "hwml_db"
description = ""

publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
annotate-snippets.workspace = true
clap.workspace = true
dashmap.workspace = true
derive-new.workspace = true
eyre.workspace = true
la-arena.workspace = true
lalrpop-util.workspace = true
logos.workspace = true
salsa.workspace = true

[build-dependencies]
lalrpop.workspace = true

[lints]
workspace = true
