[package]
name = "hwml_dev"
description = "Development shell and tooling."

publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
hwml_core.workspace = true
anyhow.workspace = true
hwml_support.workspace = true
