[package]
name = "hwml_elab"
description = "The elaborator, converting surface syntax to core syntax."

publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
annotate-snippets.workspace = true
anyhow.workspace = true
clap.workspace = true
derive-new.workspace = true
futures.workspace = true
hwml_core.workspace = true
hwml_surface.workspace = true
hwml_support.workspace = true
salsa.workspace = true
slab.workspace = true
itertools.workspace = true

[lints]
workspace = true
