[package]
name = "hwml_lsp_server"
description = ""

publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
hwml_db.workspace = true
salsa.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
dashmap.workspace = true
notify-debouncer-mini.workspace = true
crossbeam-channel.workspace = true

[lints]
workspace = true
