[package]
name = "hwml_parser"
description = ""

publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
derive-new.workspace = true
lalrpop-util.workspace = true

[build-dependencies]
lalrpop.workspace = true

[lints]
workspace = true
