[package]
name = "hwml_support"
description = "Common utilities for HWML."

publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
salsa.workspace = true
pretty.workspace = true
