[package]
name = "hwml_surface"
description = ""

publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
derive-new.workspace = true
lalrpop-util.workspace = true
logos.workspace = true

[build-dependencies]
lalrpop.workspace = true

[lints]
workspace = true
