[package]
name = "hwml"
description = ""

publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
hwml_db.workspace = true
hwml_surface.workspace = true
la-arena.workspace = true
lalrpop-util.workspace = true
salsa.workspace = true

[lints]
workspace = true
