[package]
name = "hwml"
description = ""

publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
hwml_core.workspace = true
hwml_db.workspace = true
hwml_surface.workspace = true
hwml_elab.workspace = true
hwml_support.workspace = true
la-arena.workspace = true
lalrpop-util.workspace = true
salsa.workspace = true

# Optional CIRCT backend
hwml_circt = { workspace = true, optional = true }

[features]
# By default, do not include CIRCT (requires external dependencies)
default = []
# Enable CIRCT backend for Verilog generation
circt = ["dep:hwml_circt"]

[lints]
workspace = true
