[package]
name = "hwml_server"
description = ""

publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
lsp-server.workspace = true
lsp-types.workspace = true

[lints]
workspace = true
