[package]
name = "mdbook-hwml"
description = "mdBook preprocessor and documentation validator for HWML"

publish = false
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "mdbook-hwml"
path = "src/main.rs"

[dependencies]
# Core compiler library (clean API, no markdown dependencies)
hwml_core.workspace = true

# mdBook preprocessor integration
mdbook.workspace = true
serde_json.workspace = true
anyhow.workspace = true

# Markdown parsing and processing
pulldown-cmark.workspace = true
regex.workspace = true

# File system utilities
walkdir.workspace = true

[lints]
workspace = true
