[package]
name = "hwml-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.hwml_core]
path = ".."
features = ["arbitrary"]

[[bin]]
name = "fuzz_core_roundtrip"
path = "fuzz_targets/fuzz_core_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_core_parser"
path = "fuzz_targets/fuzz_core_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_module_generation"
path = "fuzz_targets/fuzz_module_generation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_module_arbitrary"
path = "fuzz_targets/fuzz_module_arbitrary.rs"
test = false
doc = false
bench = false
